feat: add matrix bot
