# backend/internal/db/sqlc/storage/models.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.30.0
+//   sqlc v1.31.1
 
 package storage
 
@@ -116,6 +116,8 @@ type User struct {
 	SpecialTag           pgtype.Text
 	CaptchaCooldownUntil pgtype.Timestamptz
 	CaptchaType          string
+	MatrixID             pgtype.Text
+	MatrixRoomID         pgtype.Text
 }
 
 type UserBlock struct {
